--- a/app/src/styles/shoppingCart.css
+++ b/app/src/styles/shoppingCart.css
@@ -5,11 +5,24 @@
 }
 
 .dropdown {
-  background-color: #202124;
+  background-color: #212529;
   color: #fff;
 }
 
-.dropdownItem {
+.cart-item {
   font-size: small;
   border-bottom: 3px solid #747474;
+}
+
+.cart-dropdown{
+  width: 20rem;
+}
+
+.check-out-button{
+  font-size: 1rem;
+  padding: 0;
+  width: 50%;
+  height: 35px;
+  margin-left: 50%;
+  margin-top: 1rem;
 }
