--- a/app/src/styles/NavLinkHover.css
+++ b/app/src/styles/NavLinkHover.css
@@ -1,9 +1,9 @@
-.nav-link{
+.nav-link-bt{
   box-sizing: border-box;
 }
-.nav-link:hover{
+.nav-link-bt:hover{
     outline: 2px solid #0d6efd;
     color:#0d6efd !important;
     border-radius: 10px;
-    transition: outline 70ms;
+    transition: outline,color 150ms ease-in-out;
 }
